--- a/step_1.html
+++ b/step_1.html
@@ -157,7 +157,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div class=ribbon>
-<a href="https://github.com/stsb11/soldering_license">Fork me on GitHub</a>
+<a href="https://github.com/stcd11/soldering_license">Fork me on GitHub</a>
 </div>
 <center>
 <img src='img/done.jpg' width=33%>
@@ -257,6 +257,11 @@ Equipment  Run  Throw  Apron  Hair  Goggles  Iron  Listen  Clothing
 <a href="./index.html">Back to homepage</a>
 </p>
 </div>
+</div>
+</div>
+</div>
+<div id="postamble" class="status">
+<p class="validation"></p>
 </div>
 </body>
 </html>
