--- a/step_2.html
+++ b/step_2.html
@@ -168,7 +168,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div class=ribbon>
-<a href="https://github.com/stsb11/soldering_license">Fork me on GitHub</a>
+<a href="https://github.com/stcd11/soldering_license">Fork me on GitHub</a>
 </div>
 <center>
 <img src='img/done.jpg' width=33%>
@@ -301,150 +301,11 @@ for the JavaScript code in this tag.
 <h3 id="sec-2-2">Badge it</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
-<li>Below is a list of components:
+<li>To complete the badges you will need to click on the link at the bottom and complete the quiz. This will automatically badge your work.
 </li>
-</ul>
-<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
-
-
-<colgroup>
-<col  class="center" />
-
-<col  class="center" />
-</colgroup>
-<thead>
-<tr>
-<th scope="col" class="center">Component</th>
-<th scope="col" class="center">Description</th>
-</tr>
-
-<tr>
-<th scope="col" class="center">&#xa0;</th>
-<th scope="col" class="center">&#xa0;</th>
-</tr>
-
-<tr>
-<th scope="col" class="center">&#xa0;</th>
-<th scope="col" class="center">&#xa0;</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="center">Resistor</td>
-<td class="center">These act to reduce current flow, and, at the same</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">time, act to lower voltage levels within circuits</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">&#xa0;</td>
-</tr>
-</tbody>
-<tbody>
-<tr>
-<td class="center">Diode</td>
-<td class="center">This is a two-terminal electronic component that conducts</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">primarily in one direction.</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">&#xa0;</td>
-</tr>
-</tbody>
-<tbody>
-<tr>
-<td class="center">Battery</td>
-<td class="center">Transforms chemical energy into electricity.</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">&#xa0;</td>
-</tr>
-</tbody>
-<tbody>
-<tr>
-<td class="center">Switch</td>
-<td class="center">An electrical component that can break an electrical</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">circuit.</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">&#xa0;</td>
-</tr>
-</tbody>
-<tbody>
-<tr>
-<td class="center">LED</td>
-<td class="center">A component which emits light when activated.</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">&#xa0;</td>
-</tr>
-</tbody>
-<tbody>
-<tr>
-<td class="center">Lamp</td>
-<td class="center">It produces light with a wire filament heated to a high</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">temperature by an electric current passing through it,</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">until it glows.</td>
-</tr>
-</tbody>
-<tbody>
-<tr>
-<td class="center">Motor</td>
-<td class="center">An electrical device that creates motion by converting</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">electrical energy to kinetic energy.</td>
-</tr>
-
-<tr>
-<td class="center">&#xa0;</td>
-<td class="center">&#xa0;</td>
-</tr>
-</tbody>
-</table>
-
-<ul class="org-ul">
-<li>Open Word document, PowerPoint document or text editor and paste the table above into it. Then for each of the components above, <b>find a picture</b> of its circuit symbol
+<li><b>You will need to be logged into <a href="http://www.bournetolearn.com">www.bournetolearn.com</a> to complete the badge.</b>
 </li>
-<li>&#x2026;and <b>a photo</b> of the component.
-</li>
-<li>There's a brief explanation of what the components does above, but it's not important at this stage that you learn these as you'll look at the components individually as you work through the year. For now, being able to know what you're looking at is our aim.
-</li>
-<li><b>Tip:</b> Google image search is quite handy for this activity, <b>use the snipping tool to get a copy of the image.</b>
+<li>Click on this link <a href="https://www.bournetolearn.com/quizzes/y7-solderingLicense/Lesson_2/badge1/">components quiz</a>
 </li>
 </ul>
 </div>
@@ -576,34 +437,11 @@ for the JavaScript code in this tag.
 <h3 id="sec-4-1">Badge it</h3>
 <div class="outline-text-3" id="text-4-1">
 <ul class="org-ul">
-<li>Copy and paste this into an empty notepad document:
+<li>To complete the badges you will need to click on the link at the bottom and complete the quiz. This will automatically badge your work.
 </li>
-</ul>
-
-<div class="org-src-container">
-
-<pre class="src src-exercise">| Colours                      | Resistor value     |
-+------------------------------+--------------------+
-| Orange, Orange, Brown, Gold  |  330 Ohms          |
-+------------------------------+--------------------+
-| Brown, Black, Red            |                    |
-+------------------------------+--------------------+
-| Red, Yellow, Orange          |                    |
-+------------------------------+--------------------+
-| Purple, Green, Black         |                    |
-+------------------------------+--------------------+
-|                              | 10,000 Ohms (10k)  |
-+------------------------------+--------------------+
-|                              | 61 Ohms            |
-+------------------------------+--------------------+
-|                              | 100 Ohms           |
-</pre>
-</div>
-
-<ul class="org-ul">
-<li>To collect the badge, complete the table with the correct resistor values.
+<li><b>You will need to be logged into <a href="http://www.bournetolearn.com">www.bournetolearn.com</a> to complete the badge.</b>
 </li>
-<li>Save the competed work in your Systems and Control folder for this project as '<b>resistorvalues.txt</b>', and upload it to BourneToLearn.com for marking.
+<li>Click on this link <a href="https://www.bournetolearn.com/quizzes/y7-solderingLicense/Lesson_2/badge2/">resistor colour code quiz</a>
 </li>
 </ul>
 <p>
