--- a/step_3.html
+++ b/step_3.html
@@ -156,7 +156,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div class=ribbon>
-<a href="https://github.com/stsb11/soldering_license">Fork me on GitHub</a>
+<a href="https://github.com/stcd11/soldering_license">Fork me on GitHub</a>
 </div>
 
 <div id="outline-container-sec-1" class="outline-2 activity">
@@ -172,7 +172,7 @@ In the last lesson, you looked at the theory of resistors, and soldered your fir
 <ul class="org-ul">
 <li>Go to the compent racks, and take out the following resistors, you'll be using. The values you need are: 5 X 330, 5 X 1k, 6 X 22k.
 </li>
-<li>You should now be able to identify which is which by their coloured bands. Start with the 330 Ohm resistor, poking the wire legs through the hole above and below the number 330 on the PCB. Remember that the component should sit on the top of the board (with no writing on it), and the legs should stick out of the side with the tracks and pads on. Resistors can be soldered in either way round, but it looks more professional if all the gold bands line up, like mine to in the photo below.
+<li>You should now be able to identify which is which by their coloured bands. Start with the 330 Ohm resistors, poking the wire legs through the hole above and below the number 330 on the PCB. Remember that the component should sit on the top of the board (with no writing on it), and the legs should stick out of the side with the tracks and pads on. Resistors can be soldered in either way round, but it looks more professional if all the gold bands line up, like mine to in the photo below.
 </li>
 <li>Make sure the resistor is laying flat against the board, then gently angle the legs out at 45 degrees to stop the component from falling out of the board while it's being soldered.
 </li>
@@ -222,6 +222,11 @@ In the last lesson, you looked at the theory of resistors, and soldered your fir
 <a href="./index.html">Back to homepage</a>
 </p>
 </div>
+</div>
+</div>
+</div>
+<div id="postamble" class="status">
+<p class="validation"></p>
 </div>
 </body>
 </html>
