--- a/step_4.html
+++ b/step_4.html
@@ -152,7 +152,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div class=ribbon>
-<a href="https://github.com/stsb11/soldering_license">Fork me on GitHub</a>
+<a href="https://github.com/stcd11/soldering_license">Fork me on GitHub</a>
 </div>
 
 <div id="outline-container-sec-1" class="outline-2 activity">
@@ -224,6 +224,11 @@ We're now well on our way to completing our soldering license. Sometimes when we
 <a href="./index.html">Back to homepage</a>
 </p>
 </div>
+</div>
+</div>
+</div>
+<div id="postamble" class="status">
+<p class="validation"></p>
 </div>
 </body>
 </html>
