--- a/step_5.html
+++ b/step_5.html
@@ -145,13 +145,14 @@ for the JavaScript code in this tag.
 <li><a href="#sec-1">1. Hot glue guns</a>
 <ul>
 <li><a href="#sec-1-1">Using hot glue gun</a></li>
+<li><a href="#sec-1-2">Badge It</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 <div class=ribbon>
-<a href="https://github.com/stsb11/soldering_license">Fork me on GitHub</a>
+<a href="https://github.com/stcd11/soldering_license">Fork me on GitHub</a>
 </div>
 
 <div id="outline-container-sec-1" class="outline-2 activity">
@@ -212,6 +213,21 @@ We're nearly there now, you have completed all the soldering for the 'soldering 
 </li>
 </ul>
 </div>
+</div>
+
+<div id="outline-container-sec-1-2" class="outline-3 badge">
+<h3 id="sec-1-2">Badge It</h3>
+<div class="outline-text-3" id="text-1-2">
+<ul class="org-ul">
+<li>Once you have completed your project, take pictures of both sides of the board and upload them to <a href="http://www.bournetolearn.com">www.bournetolearn.com</a>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div id="postamble" class="status">
+<p class="validation"></p>
 </div>
 </body>
 </html>
