Spelling error fixed

--- a/evaluation.html
+++ b/evaluation.html
@@ -98,7 +98,7 @@ for the JavaScript code in this tag.
 <h3 id="sec-1-2">Gold</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
-<li>For your current project, indentify <b>and explain</b> 2 tasks that you feel went very well?
+<li>For your current project, identify <b>and explain</b> 2 tasks that you feel went very well?
 </li>
 <li>Now identify 2 tasks that you feel did not go well <b>and why</b>?
 </li>
