Added progress ladder info to evaluation

--- a/evaluation.html
+++ b/evaluation.html
@@ -75,6 +75,8 @@ for the JavaScript code in this tag.
 <h3 id="sec-1-1">Silver</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
+<li>Progress ladder <b>Yellow</b>, Identify areas for improvement in a project, with assistance.
+</li>
 <li>Use the snipping tool and take a screenshot of your progress ladders as they are currently.
 </li>
 <li>Using the bar graphs, discuss the following:
@@ -98,6 +100,8 @@ for the JavaScript code in this tag.
 <h3 id="sec-1-2">Gold</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
+<li>Progress ladder <b>Green</b>, Write a list of tests that could be performed on a product.
+</li>
 <li>For your current project, identify <b>and explain</b> 2 tasks that you feel went very well?
 </li>
 <li>Now identify 2 tasks that you feel did not go well <b>and why</b>?
@@ -111,6 +115,8 @@ for the JavaScript code in this tag.
 <h3 id="sec-1-3">Platinum</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
+<li>Progress ladder <b>Blue</b>, Write and implement a basic test plan, stating expected results.
+</li>
 <li>Self evaluation.
 </li>
 <li>In your own words, <b>describe</b> how you managed the entire Design Engineering process for this project.
