Changed S&C with DE

--- a/step_2.html
+++ b/step_2.html
@@ -276,7 +276,7 @@ for the JavaScript code in this tag.
 <h3 id="sec-2-1">Learn it</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
-<li>You'll use lots of different components in S&amp;C.
+<li>You'll use lots of different components in Design Engineering.
 </li>
 <li>It's quite important to be able to know which ones are which.
 </li>
