--- a/step_2.html
+++ b/step_2.html
@@ -332,6 +332,10 @@ for the JavaScript code in this tag.
 </li>
 </ul>
 
+<div class="figure">
+<p><img src="./img/Resistor_colour.png" alt="Resistor_colour.png" />
+</p>
+</div>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
