--- a/step_2.html
+++ b/step_2.html
@@ -264,10 +264,14 @@ for the JavaScript code in this tag.
 <p><img src="./img/soldering.jpg" alt="soldering.jpg" />
 </p>
 </div>
+<ul class="org-ul">
+<li>Here is another video on soldering from Manchester University.
+</li>
+</ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/AqvHogekDI4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </div>
 </div>
-
 <div id="outline-container-sec-2" class="outline-2 activity">
 <h2 id="sec-2"><span class="section-number-2">2</span> Components</h2>
 <div class="outline-text-2" id="text-2">
