--- a/step_6.html
+++ b/step_6.html
@@ -208,7 +208,7 @@ for the JavaScript code in this tag.
 </p>
 </div>
 <ul class="org-ul">
-<li>On the right hand side are all your component choices. You will be able to find all you resistors, diodes and 8-pin carrier components here. The 8-pin carrier will need to be a 8-pin dual-in-line option. See the images below.
+<li>On the right hand side are all your component choices. You will be able to find all you resistors, diodes and 8-pin DIL components here. The 8-pin carrier will need to be the 8-pin DIL option. See the images below.
 </li>
 </ul>
 <p>
