First commit after reset

--- a/step_2.html
+++ b/step_2.html
@@ -225,13 +225,87 @@ for the JavaScript code in this tag.
 </li>
 <li>The grey band on one end is like an arrow-head, indicating the direction of current-flow. There's also an arrow on the PCB between two of your holes. This is where the diode needs to go.
 </li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/Component_and_board.png" alt="Component_and_board.png" />
+</p>
+</div>
+<ul class="org-ul">
+<li>You will need to bend the legs at 90 degrees to push it through the board.
+</li>
+<li>Place your diode through the holes, so that the grey band points the same way as the arrow-head below the board.
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/component_in_board.png" alt="component_in_board.png" />
+</p>
+</div>
+<ul class="org-ul">
+<li>You then need to turn the board over and then bend the component legs slightly over (30 to 45 degress) to stop it falling out when you solder it.
+</li>
+<li><b>DON'T LAY THE LEGS DOWN FLAT AGAINST THE BOARD.</b>
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/bentlegs.png" alt="bentlegs.png" />
+</p>
+</div>
+<ul class="org-ul">
 <li>When soldering, the top of the board (the side with nothing on it) is called the "Component side", and is where all your components will sit when you're finished.
 </li>
 <li>The side with all the shiny tracks and pads drawn on it is called the "Solder side", and is the side we apply solder to.
 </li>
-<li>Place your diode through the holes, so that the grey band points the same way as the arrow-head, then bend the legs of the component out at about 45 degrees. This will stop the component from falling out fo the board when you solder it. 
+<li>First, place the soldering iron on the component leg and track, <b>the flat edge of the iron should be against the component leg.</b>
 </li>
-<li>DON'T LAY THE LEGS DOWN FLAT AGAINST THE BOARD.
+</ul>
+
+<div class="figure">
+<p><img src="./img/iron_on.png" alt="iron_on.png" />
+</p>
+</div>
+<ul class="org-ul">
+<li>The solder then needs to be introduced from the opposite side.
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/solder_on.png" alt="solder_on.png" />
+</p>
+</div>
+<ul class="org-ul">
+<li>Add a little solder to the joint until the solder seals the hole and is all the way around the component leg. Be careful not to put too much solder.
+</li>
+<li><b>You must always remove the solder wire before the soldering iron.</b>
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/soldered (1).png" alt="soldered (1).png" />
+</p>
+</div>
+<ul class="org-ul">
+<li>You now need to use the side cutters to cut the excess wire off.
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/cutters.png" alt="cutters.png" />
+</p>
+</div>
+<ul class="org-ul">
+<li>The finished joint should look like this.
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/chopped.png" alt="chopped.png" />
+</p>
+</div>
+<ul class="org-ul">
+<li>Here is what the final soldered joints should look like.
 </li>
 </ul>
 
