Changed S&C to DE

--- a/step_1.html
+++ b/step_1.html
@@ -171,7 +171,7 @@ for the JavaScript code in this tag.
 <h3 id="sec-1-1">Learn it</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
-<li>Systems &amp; Control is a superb for taking your maths and physics skills, and applying them to problems in the real world.
+<li>Design Engineering is a superb for taking your maths and physics skills, and applying them to problems in the real world.
 </li>
 <li>You'll develop creativity, problem-solving and practical skills throughout the course, make some excellent products to keep forever, and hopefully enjoy yourself along the way.
 </li>
@@ -240,9 +240,9 @@ Equipment  Run  Throw  Apron  Hair  Goggles  Iron  Listen  Clothing
 </li>
 <li>When finished:
 <ul class="org-ul">
-<li>Make a 'Systems and Control' folder in your H: drive.
+<li>In your 'Year 7 - Design Engineering' folder you have created in your 'H' drive.
 </li>
-<li>Make a 'Year 7' folder inside it
+<li>Make a 'Soldering License' folder inside it
 </li>
 <li>Make a '1 - Licence' folder inside that
 </li>
